<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Introduction"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/charcoal"
            android:textSize="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="vertical"
            android:id="@+id/colorBar"
            android:layout_marginTop="24dp"
            android:layout_below="@id/title"></LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:id="@+id/chart"
            android:layout_below="@id/colorBar"></LinearLayout>

        <TextView
            android:id="@+id/intro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_fragment_intro"
            android:textSize="16dp"
            android:textColor="@color/charcoal"
            android:layout_marginTop="12dp"
            android:layout_below="@id/chart"/>
        <TextView
            android:id="@+id/graph_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_fragment_2"
            android:textSize="16dp"
            android:textColor="@color/charcoal"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/intro_text"/>

        <TextView
            android:id="@+id/graph_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_fragment_3"
            android:textSize="16dp"
            android:textColor="@color/charcoal"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/graph_text_2"/>


        <TextView
            android:id="@+id/graph_text_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_fragment_4"
            android:textSize="16dp"
            android:textColor="@color/charcoal"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/graph_text_3"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
