<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/status_bar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/neutral"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <TextView
                android:id="@+id/scroll_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="Scrolling On"></TextView>
            <TextView
                android:id="@+id/gesture_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:text="Gestures On"></TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/colorBox"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:orientation="vertical"
            android:layout_weight="1"></LinearLayout>
    </LinearLayout>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/status_bar">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Scrolling"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/charcoal"
                android:textSize="30dp"/>


            <TextView
                android:id="@+id/demo_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_text_1"
                android:textSize="16dp"
                android:textColor="@color/charcoal"
                android:layout_marginTop="12dp"
                android:layout_below="@id/title"/>
            <TextView
                android:id="@+id/demo_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_text_2"
                android:textSize="16dp"
                android:textColor="@color/charcoal"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/demo_text_1"/>

            <TextView
                android:id="@+id/demo_text_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_text_3"
                android:textSize="16dp"
                android:textColor="@color/charcoal"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/demo_text_2"/>

            <TextView
                android:id="@+id/lorem_ipsum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:textSize="16dp"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/demo_text_3"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
